--- a/webCarros/package.json
+++ b/webCarros/package.json
@@ -17,9 +17,11 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
     "sort-by": "^1.2.0",
+    "swiper": "^11.1.15",
     "uuid": "^11.0.3",
     "zod": "^3.23.8"
   },
@@ -27,6 +29,7 @@
     "@eslint/js": "^9.15.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/swiper": "^5.4.3",
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
